# screeps-client

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  mcp.json  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.changeset/: README.md  add-badge-editor.md  add-unclaimable-rooms.md  atlas-json-cache-busting.md  auto-guest-no-login-flash.md  branch-management.md  bright-bobcats-vanish.md  clear-caches.md  client-capabilities.md  code-panel-typescript.md  console-pause-filter.md  container-fill-rendering.md  controller-intents-fix.md  controller-structure-panels.md  creep-say-bubbles.md  custom-ui-editor-consumers.md  custom-ui-editor.md  custom-ui-panel.md  deposit-sprites.md  disable-tick-animations.md  discord-login-button.md  extractor-ring.md  feat-pinch-zoom-mobile.md  fix-client-assets-dir.md  fix-creep-rings-destroyed.md  fix-namespace-collision.md  fix-null-objects-listener-errors.md  fix-road-destroy-structure.md  fix-single-quadrant-bounds.md  fix-sprite-base-path.md  fix-steam-login-new-account.md  fix-terrain-batch-stroke-fill.md  fix-terrain-swamp-color.md  fix-token-auth-static-token.md  fix-xxscreeps-base-href.md  fix-xxscreeps-basepath-navigation.md  fix-xxscreeps-map-shard-route.md  fix-xxscreeps-relative-base.md  flag-actions-shard.md  flag-move-cross-room.md  (+61 more)
docs/: custom-ui.md  (+3 more)
screeps-desktop/src-tauri/: Cargo.toml  tauri.conf.json
screeps-desktop/src-tauri/capabilities/: default.json
screeps-desktop/src-tauri/icons/: icon.icns
screeps-desktop/src-tauri/src/: lib.rs  main.rs
(+247 files in other folders)
