[package]
name = "screeps-desktop"
version = "0.1.0"
description = "Standalone Tauri desktop wrapper for screeps-client"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "screeps_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
